--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_myo"
+        android:icon="@drawable/ic_launcher"
         android:name="hackatbrown.com.myopersonaltrainer.MyApp"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
